--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "expo start",
     "start:tunnel": "expo start --tunnel",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -26,6 +26,7 @@
     "expo-image": "~3.0.10",
     "expo-linking": "~8.0.9",
     "expo-location": "^19.0.7",
+    "expo-notifications": "~0.32.13",
     "expo-router": "~6.0.15",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
@@ -37,7 +38,7 @@
     "react-native": "0.81.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-maps": "^1.26.18",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
