added fonts. adjust styling WIP

--- a/app.json
+++ b/app.json
@@ -48,7 +48,8 @@
           "color": "#ffffff",
           "sounds": []
         }
-      ]
+      ],
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true,
