--- a/app.json
+++ b/app.json
@@ -25,8 +25,7 @@
       "permissions": [
         "INTERNET",
         "ACCESS_COARSE_LOCATION",
-        "ACCESS_FINE_LOCATION",
-        "FOREGROUND_SERVICE"
+        "ACCESS_FINE_LOCATION"
       ]
     },
     "web": {
